add back the reset button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             </a>
         </div>
     </nav>
+    <nav class="level">
+        <div class="level-item">
+            <button id="reset" class="button is-dark">Reset</button>
+        </div>
+    </nav>
 </header>
 
 <body>
