add some padding to top

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             flex-direction: row;
             justify-content: space-between;
         }
+
+        header {
+            padding-top: 24px;
+        }
     </style>
 </head>
 
