revert to is-fullhd
Fixes weird width issues when clicking on the "+" button near the media
query width.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </header>
 
 <body>
-    <div class="container is-touch">
+    <div class="container is-fullhd">
         <div id="content">
             <table id="table1" class="display nowrap" style="width:100%">
                 <thead>
